k8s-manifests/jaeger.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger
  namespace: development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaeger
  template:
    metadata:
      labels:
        app: jaeger
    spec:
      containers:
      - name: jaeger
        image: jaegertracing/all-in-one:latest
        ports:
        - containerPort: 16686
        - containerPort: 14268
        - containerPort: 6831
          protocol: UDP
        - containerPort: 6832
          protocol: UDP
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger
  namespace: development
spec:
  selector:
    app: jaeger
  ports:
    - name: ui
      port: 16686
      targetPort: 16686
    - name: collector
      port: 14268
      targetPort: 14268
    - name: agent-compact
      port: 6831
      targetPort: 6831
      protocol: UDP
    - name: agent-binary
      port: 6832
      targetPort: 6832
      protocol: UDP
  type: ClusterIP
